Fix project icon alignment for small screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -283,6 +283,7 @@ a:hover {
     .card {
         flex-direction: column;
         align-items: center;
+        text-align: center;
     }
 
     .card-section.icon img {
@@ -292,7 +293,7 @@ a:hover {
     .card-section.description {
         width: 100%;
         text-align: center;
-        margin: 4px 16px;
+        margin: 4px;
     }
 
     .card-section.description h3 {
